/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";
package hbase.pb;

option java_package = "org.apache.hadoop.hbase.protobuf.generated";
option java_outer_classname = "ManagedKeysProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

import "HBase.proto";

message ManagedKeysRequest {
  required string key_cust = 1;
  required string key_namespace = 2;
}

enum ManagedKeyState {
  KEY_ACTIVE = 1;
  KEY_INACTIVE = 2;
  KEY_FAILED = 3;
  KEY_DISABLED = 4;
}

message ManagedKeysResponse {
  required string key_cust = 1;
  required string key_namespace = 2;
  required ManagedKeyState key_state = 3;
  optional string key_metadata = 4;
  optional int64 refresh_timestamp = 5;
}

message GetManagedKeysResponse {
  repeated ManagedKeysResponse state = 1;
}

message RotateSTKResponse {
  required bool rotated = 1;
}

service ManagedKeysService {
  rpc EnableKeyManagement(ManagedKeysRequest)
    returns (GetManagedKeysResponse);
  rpc GetManagedKeys(ManagedKeysRequest)
    returns (GetManagedKeysResponse);
  rpc RotateSTK(EmptyMsg)
    returns (RotateSTKResponse);
}
